# Project-Fly

./: .env.example  .gitignore  Dockerfile  README.md  netlify.toml  package.json  railway.json
.github/workflows/: deploy.yml
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  agent.py  experiments.py
backend/app/models/: experiment.py
frontend/: index.html  package.json  vite.config.js
frontend/public/: _redirects
frontend/src/: App.vue
frontend/src/api/: index.js
frontend/src/components/: AgentChat.vue
frontend/src/router/: index.js
frontend/src/views/: CreateExperiment.vue  Dashboard.vue  ExperimentDetail.vue
